--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automatización de Pin Maker Premium usando Puppeteer y Express",
   "main": "main.js",
   "scripts": {
-    "start": "bash start.sh"
+    "start": "node main.js"
   },
   "dependencies": {
     "express": "^4.18.2",
